--- a/alati-server-side/src/main/resources/static/index.html
+++ b/alati-server-side/src/main/resources/static/index.html
@@ -41,7 +41,7 @@
 							<a class="nav-link" href="/#!/workers">Radnici</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="/#!/test">Test</a>
+							<a class="nav-link" href="/#!/production">Učinci</a>
 						</li>
 					</ul>
 				</div>
