--- a/alati-server-side/src/main/resources/static/index.html
+++ b/alati-server-side/src/main/resources/static/index.html
@@ -15,13 +15,14 @@
 	<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
 	<style>
-		#topMeni .nav-link.active {
-			color: #fff;
-			background-color: #5e5f5f;
-		}
-
 		#topMeni a.nav-link {
 			color: rgb(160, 160, 158);
+		}
+
+		#topMeni .nav-link.active,
+		.nav-pills .show>.nav-link {
+			color: #fff !important;
+			background-color: #5e5f5f;
 		}
 	</style>
 
@@ -36,14 +37,32 @@
 			<nav class="navbar navbar-expand navbar-dark bg-dark fixed-top">
 				<a class="navbar-brand" href="/#!/">Meni</a>
 				<div>
+
 					<ul class="nav nav-pills" bs-active-link>
+
 						<li class="nav-item">
 							<a class="nav-link" href="/#!/workers">Radnici</a>
 						</li>
+
 						<li class="nav-item">
 							<a class="nav-link" href="/#!/production">Učinci</a>
 						</li>
+
+						<li id="test" class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+								data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+								Dropdown
+							</a>
+							<div class="dropdown-menu" aria-labelledby="navbarDropdown" ng-mouseover="prikaziDropdown()">
+								<a class="dropdown-item" href="#">Action</a>
+								<a class="dropdown-item" href="#">Another action</a>
+								<div class="dropdown-divider"></div>
+								<a class="dropdown-item" href="#">Something else here</a>
+							</div>
+						</li>
+
 					</ul>
+
 				</div>
 			</nav>
 
