iybacio autoshow dropdown

--- a/alati-server-side/src/main/resources/static/app/html/workers/workers-list.html
+++ b/alati-server-side/src/main/resources/static/app/html/workers/workers-list.html
@@ -5,7 +5,7 @@
 </style>
 
 
-<div ng-controller="WorkersCtrl">
+<div ng-controller="WorkersListCtrl">
 
     <h1>Radnici</h1>
     <button class="btn btn-primary" ng-click="exportToExcel('#tableToExport')">Export to Excel</button>
