--- a/alati-server-side/src/main/resources/static/index.html
+++ b/alati-server-side/src/main/resources/static/index.html
@@ -20,9 +20,15 @@
 		}
 
 		#topMeni .nav-link.active,
-		.nav-pills .show>.nav-link {
+		.nav-pills .show>.nav-link,
+		#topMeni .dropdown-item.active,
+		.dropdown-item:active {
 			color: #fff !important;
 			background-color: #5e5f5f;
+		}
+
+		#topMeni .dropdown-menu.show {
+			margin-top: 0px;
 		}
 	</style>
 
@@ -36,32 +42,36 @@
 
 			<nav class="navbar navbar-expand navbar-dark bg-dark fixed-top">
 				<a class="navbar-brand" href="/#!/">Meni</a>
-				<div>
+				<div class="collapse navbar-collapse">
 
-					<ul class="nav nav-pills" bs-active-link>
-
-						<li class="nav-item">
-							<a class="nav-link" href="/#!/workers">Radnici</a>
-						</li>
-
-						<li class="nav-item">
-							<a class="nav-link" href="/#!/production">Učinci</a>
-						</li>
+					<ul class="nav nav-pills mr-auto" bs-active-link>
 
 						<li id="test" class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-								data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-								Dropdown
-							</a>
-							<div class="dropdown-menu" aria-labelledby="navbarDropdown" ng-mouseover="prikaziDropdown()">
-								<a class="dropdown-item" href="#">Action</a>
+							<a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button"
+								data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Radnici</a>
+							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+								<a class="dropdown-item" href="/#!/workers-list">Lista radnika</a>
 								<a class="dropdown-item" href="#">Another action</a>
 								<div class="dropdown-divider"></div>
 								<a class="dropdown-item" href="#">Something else here</a>
 							</div>
+						</li>						
+
+						<li id="test2" class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" href="" id="navbarDropdown2" role="button"
+								data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Učinci</a>
+							<div class="dropdown-menu" aria-labelledby="navbarDropdown2" >
+								<a class="dropdown-item" href="#">Another action</a>
+								<div class="dropdown-divider"></div>
+								<a class="dropdown-item" href="https://translate.google.rs/">Something else here</a>
+							</div>
 						</li>
 
 					</ul>
+
+					<span class="navbar-text" style="margin-right: 2%;">
+						{{trenutnaStrana}}
+					</span>
 
 				</div>
 			</nav>
@@ -86,13 +96,7 @@
 		integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
 		crossorigin="anonymous"></script>
 	<script src="/assets/js/bootstrap.js" type="text/javascript"></script>
-
-	<!-- 	<script>
-	 $(".nav .nav-link").on("click", function () {
-	 $(".nav").find(".active").removeClass("active");
-	 $(this).addClass("active");
-	 });
-		</script> -->
+	
 </body>
 
 </html>
