--- a/alati-server-side/src/main/resources/static/app/html/workers/workers-presence-week.html
+++ b/alati-server-side/src/main/resources/static/app/html/workers/workers-presence-week.html
@@ -5,10 +5,14 @@
 </style>
 
 
-<div ng-controller="WorkersListCtrl">
+<div ng-controller="WorkersPresenceWeekCtrl">
 
-    <h1>Lista radnika</h1>
+    <h1>Pregled prisustva radnika</h1>
     <button class="btn btn-primary" ng-click="exportToExcel('#tableToExport')">Export to Excel</button>
+
+
+
+
 
     <div>
         <div class="col-3 col-xs-6 col-md-2 col-lg-1 form-group float-right">
@@ -19,13 +23,24 @@
                 <option value="50" ng-selected="rowsPerPage == 50">50</option>
             </select>
         </div>
+        <div class="float-right">
+            <input type="date" name="Date2" id="inputDate2" class="form-control" ng-model="datum2"
+                ng-change="doSearch(true)">
+        </div>
+        <div class="float-right">
+            <input type="date" name="Date1" id="inputDate1" class="form-control" ng-model="datum1"
+                ng-change="doSearch(true)">
+        </div>
     </div>
 
+
+
+
     <div id="tableToExport">
-        <table class="table table-striped table-hover">
+        <table class="table table-bordered table-hover">
             <thead class="thead-dark">
                 <tr>
-                    <th colspan="4">
+                    <th colspan="{{dani.length+4}}">
                         <div class="input-group">
                             <input type="text" class="form-control" placeholder="Pretraga radnika"
                                 aria-label="Pretraga radnika" aria-describedby="basic-addon2"
@@ -52,7 +67,10 @@
                     <th>Ime</th>
                     <th>Prezime</th>
                     <th>Tip ugovora</th>
-                    <th style="text-align: center;">Akcije</th>
+                    <th style="text-align: center;" ng-repeat="d in dani">{{d.getDate()+"/"+d.getMonth()}}</th>
+                    <th style="text-align: center;">
+                        SUM
+                    </th>
                 </tr>
             </thead>
 
@@ -62,17 +80,18 @@
                     <td>{{w.name}}</td>
                     <td>{{w.lastName}}</td>
                     <td>{{w.contractType}}</td>
+                    <td style="text-align: center;" ng-repeat="d in dani">
+                        <span>{{w.presences[$index].hours}}</span>
+                    </td>
                     <td style="text-align: center;">
-                        <button type="button" class="btn btn-warning">Izmeni</button>
-                        <button type="button" class="btn btn-danger" ng-click="doDelete(w.id)">Obriši</button>
-                        <button type="button" class="btn btn-info">Pretraži učinke</button>
+                        <span>{{w.sumHours}}</span>
                     </td>
                 </tr>
             </tbody>
 
             <tfoot class="thead-dark">
                 <tr>
-                    <th colspan="4"></th>
+                    <th colspan="{{dani.length+4}}"></th>
                     <th>
                         <div class="btn-group float-right" style="margin-bottom:5px">
                             <button ng-disabled="pageNum == 0" ng-click="doPage(-1)"
