--- a/alati-server-side/src/main/resources/static/app/html/workers/workers-presence.html
+++ b/alati-server-side/src/main/resources/static/app/html/workers/workers-presence.html
@@ -5,10 +5,14 @@
 </style>
 
 
-<div ng-controller="WorkersListCtrl">
+<div ng-controller="WorkersPresenceCtrl">
 
-    <h1>Lista radnika</h1>
+    <h1>Prisustvo radnika</h1>
     <button class="btn btn-primary" ng-click="exportToExcel('#tableToExport')">Export to Excel</button>
+
+
+
+
 
     <div>
         <div class="col-3 col-xs-6 col-md-2 col-lg-1 form-group float-right">
@@ -19,13 +23,17 @@
                 <option value="50" ng-selected="rowsPerPage == 50">50</option>
             </select>
         </div>
+        <div class="float-right">
+            <input type="date" name="Date" id="inputDate" class="form-control" ng-model="datum"
+                ng-change="doSearch(true)">
+        </div>
     </div>
 
     <div id="tableToExport">
         <table class="table table-striped table-hover">
             <thead class="thead-dark">
                 <tr>
-                    <th colspan="4">
+                    <th colspan="5">
                         <div class="input-group">
                             <input type="text" class="form-control" placeholder="Pretraga radnika"
                                 aria-label="Pretraga radnika" aria-describedby="basic-addon2"
@@ -52,6 +60,7 @@
                     <th>Ime</th>
                     <th>Prezime</th>
                     <th>Tip ugovora</th>
+                    <th style="text-align: center;">Vreme na poslu</th>
                     <th style="text-align: center;">Akcije</th>
                 </tr>
             </thead>
@@ -63,16 +72,20 @@
                     <td>{{w.lastName}}</td>
                     <td>{{w.contractType}}</td>
                     <td style="text-align: center;">
-                        <button type="button" class="btn btn-warning">Izmeni</button>
-                        <button type="button" class="btn btn-danger" ng-click="doDelete(w.id)">Obriši</button>
-                        <button type="button" class="btn btn-info">Pretraži učinke</button>
+                        <input type="number" name="{{w.id}}" id="input{{w.id}}" class="form-control" step="0.25"
+                            ng-model="w.presence.hours">
+                    </td>
+                    <td style="text-align: center;">
+                        <button type="button" class="btn btn-success" ng-click="doSave($index)">Sačuvaj</button>
+                        <button type="button" class="btn btn-success" ng-click="doSave8($index)">Sačuvaj 8h</button>
+                        <button type="button" class="btn btn-danger" ng-click="doDelete($index)" ng-disabled="w.presence.id == null">Obriši</button>
                     </td>
                 </tr>
             </tbody>
 
             <tfoot class="thead-dark">
                 <tr>
-                    <th colspan="4"></th>
+                    <th colspan="5"></th>
                     <th>
                         <div class="btn-group float-right" style="margin-bottom:5px">
                             <button ng-disabled="pageNum == 0" ng-click="doPage(-1)"
