--- a/alati-server-side/src/main/resources/static/index.html
+++ b/alati-server-side/src/main/resources/static/index.html
@@ -51,9 +51,9 @@
 								data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Radnici</a>
 							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 								<a class="dropdown-item" href="/#!/workers-list">Lista radnika</a>
-								<a class="dropdown-item" href="#">Another action</a>
 								<div class="dropdown-divider"></div>
-								<a class="dropdown-item" href="#">Something else here</a>
+								<a class="dropdown-item" href="/#!/workers-presence">Prisustvo radnika</a>								
+								<a class="dropdown-item" href="/#!/workers-presence-week">Pregled prisustva</a>
 							</div>
 						</li>						
 
