sredio sort po prezimenu

--- a/alati-server-side/src/main/resources/static/app/html/workers/workers-list.html
+++ b/alati-server-side/src/main/resources/static/app/html/workers/workers-list.html
@@ -42,7 +42,7 @@
                 </div>
 
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Odustani</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal" ng-click="doResetNewWorkerFields()">Odustani</button>
                     <button type="button" class="btn btn-primary" ng-click="doSave()">Sačuvaj radnika</button>
                 </div>
             </div>
