--- a/alati-server-side/src/main/resources/static/app/html/workers/workers-presence.html
+++ b/alati-server-side/src/main/resources/static/app/html/workers/workers-presence.html
@@ -16,7 +16,7 @@
 
     <div>
         <div class="col-3 col-xs-6 col-md-2 col-lg-1 form-group float-right">
-            <select ng-model="rowsPerPage" ng-change="doSearch()" id="rowsPerPage" class="custom-select"
+            <select ng-model="rowsPerPage" ng-change="doSearch(true, false)" id="rowsPerPage" class="custom-select"
                 name="rowsPerPage">
                 <option value="10" ng-selected="rowsPerPage == 10">10</option>
                 <option value="20" ng-selected="rowsPerPage == 20">20</option>
@@ -25,12 +25,12 @@
         </div>
         <div class="float-right">
             <input type="date" name="Date" id="inputDate" class="form-control" ng-model="datum"
-                ng-change="doSearch(true)">
+                ng-change="doSearch(true, false)">
         </div>
         <div class="float-right" style="margin-right: 2ch;">
             <label class="form-check-label">
                 <input type="checkbox" class="form-check-input" value="checkedValue" ng-model="prikaziSamoAktivne"
-                    ng-change="doSearch(true)">
+                    ng-change="doSearch(true, false)">
                 Prikaži samo <br> aktivne radnike
             </label>
         </div>
@@ -47,9 +47,9 @@
                                 ng-model="searchWorker.nameOrLastName">
                             <div class="input-group-append">
                                 <button class="btn btn-outline-secondary" type="button"
-                                    ng-click="doSearch(true)">Pretraži</button>
+                                    ng-click="doSearch(true, false)">Pretraži</button>
                                 <button class="btn btn-outline-secondary" type="button"
-                                    ng-click="doSearch(false)">Reset</button>
+                                    ng-click="doSearch(true, true)">Reset</button>
                             </div>
                         </div>
                     </th>
