--- a/alati-server-side/src/main/resources/static/index.html
+++ b/alati-server-side/src/main/resources/static/index.html
@@ -7,9 +7,12 @@
 
 	<script src="/assets/js/angular.js" type="text/javascript"></script>
 	<script src="/assets/js/angular-route.js" type="text/javascript"></script>
+
 	<script src="/app/js/main.js" type="text/javascript"></script>
 	<script src="/app/js/home.js" type="text/javascript"></script>
 	<script src="/app/js/workers.js" type="text/javascript"></script>
+	<script src="/app/js/productivity.js" type="text/javascript"></script>
+
 
 	<link rel="stylesheet" href="/assets/css/bootstrap.css">
 	<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -61,7 +64,7 @@
 							<a class="nav-link dropdown-toggle" href="" id="navbarDropdown2" role="button"
 								data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Učinci</a>
 							<div class="dropdown-menu" aria-labelledby="navbarDropdown2" >
-								<a class="dropdown-item" href="#">Another action</a>
+								<a class="dropdown-item" href="/#!/productivity-input">Unos učinaka</a>
 								<div class="dropdown-divider"></div>
 								<a class="dropdown-item" href="https://translate.google.rs/">Something else here</a>
 							</div>
