added table for viewing production

--- a/alati-server-side/src/main/resources/static/index.html
+++ b/alati-server-side/src/main/resources/static/index.html
@@ -81,7 +81,7 @@
 
 		</div>
 
-		<div class="container" style="margin-top: 75px;">
+		<div class="container-fluid" style="margin-top: 75px; padding-left: 2%; padding-right: 2%;">
 
 			<div ng-view>
 			</div>
